--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "canvas": "^2.11.2",
     "date-fns": "^3.6.0",
     "electron-log": "^5.1.5",
     "electron-updater": "^6.1.7",
+    "html2canvas": "^1.4.1",
+    "png-to-ico": "^2.1.8",
+    "potrace": "^2.1.8",
     "puppeteer": "^14.2.0",
     "request": "^2.88.2",
+    "snowflake-id": "^1.1.0",
     "spark-md5": "^3.0.2",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "webp-converter": "^2.3.3"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
@@ -51,6 +57,7 @@
     "jszip-utils": "^0.1.0",
     "less": "^4.1.1",
     "lodash": "^4.17.21",
+    "node-gyp": "^10.2.0",
     "nprogress": "^0.2.0",
     "pizzip": "^3.1.3",
     "prettier": "^3.3.2",
